working get and put for user collections
