# src/main/java/com/jkerak/api/UserCollectionsApiImpl.java
@@ -1,7 +1,10 @@
 package com.jkerak.api;
 
+import com.jkerak.dto.UserCollectionDto;
 import com.jkerak.model.UserCollection;
 import com.jkerak.service.UserCollectionService;
+import io.swagger.annotations.ApiParam;
+import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import javax.ws.rs.core.Response;
 
@@ -9,6 +12,9 @@ public class UserCollectionsApiImpl implements UserCollectionsApi {
 
     @Autowired
     private UserCollectionService userCollectionService;
+
+    @Autowired
+    private ModelMapper modelMapper;
 
     public Response createUserCollection(String title) throws NotFoundException {
         return null;
@@ -24,6 +30,19 @@ public class UserCollectionsApiImpl implements UserCollectionsApi {
 
     public Response userCollectionsIdGet(Long id) throws NotFoundException {
         UserCollection userCollection = userCollectionService.getUserCollection(id);
-        return Response.ok().entity(userCollection).build();
+        UserCollectionDto collectionDto = modelMapper.map(userCollection, UserCollectionDto.class);
+
+        return Response.ok().entity(collectionDto).build();
     }
+
+    public Response userCollectionsIdPut(Long id, UserCollectionDto userCollectionDto) throws NotFoundException {
+        userCollectionService.updateUserCollection(id,userCollectionDto);
+        UserCollection userCollection = userCollectionService.getUserCollection(id);
+        UserCollectionDto collectionDto = modelMapper.map(userCollection, UserCollectionDto.class);
+
+        return Response.ok().entity(collectionDto).build();
+    }
+
+
+
 }
