# src/main/resources/swagger.yaml
@@ -22,6 +22,26 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/userCollectionDto'
+    put:
+      description: |
+        update user collection record.
+      parameters:
+        - name: id
+          in: path
+          description: UserCollectionID
+          required: true
+          type: integer
+          format: int64
+        - name: userCollectionDto
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/userCollectionDto'
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/userCollectionDto'
 
   /userCollections/{id}/ignore:
     post:
